--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: java
 sudo: required
 script:
  - ./gradlew cucumber
- - ./gradlew -i check
- - ./gradlew jar
+ - ./gradlew check
 
 before_install:
  - chmod +x gradlew
@@ -18,10 +17,6 @@ jdk:
 
 services:
 - mysql
-
-after_success:
-- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash
-  travis-scripts/push-test-results.sh
 
 notifications:
   email: false
