--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,26 @@
 language: java
-
-sudo: required
-
 script:
- - ./gradlew check
+ - ./gradlew cucumber
+ - ./gradlew -i check
+ - ./gradlew jar
 
 before_install:
  - chmod +x gradlew
  - mysql -e "create database IF NOT EXISTS webapp;" -uroot
 
+before_script:
+- ./gradlew createDatabase
+
 jdk:
- - oraclejdk8
- - openjdk8
+ - oraclejdk7
+ - openjdk7
 
 services:
 - mysql
+
+after_success:
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash
+  travis-scripts/push-test-results.sh
 
 notifications:
   email: false
